<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:clickable="true" >

            <ImageView
                android:id="@+id/cloud"
                android:layout_width="300dp"
                android:layout_height="139dp"
                android:contentDescription="@null"
                android:src="@drawable/cloud0" />

            <ImageView
                android:id="@+id/ground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ground" />

            <ImageView
                android:id="@+id/board"
                android:layout_width="30dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:src="@drawable/board" />

            <ImageView
                android:id="@+id/way"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/bow"
                android:layout_width="48dp"
                android:layout_height="84dp"
                android:contentDescription="@null"
                android:src="@drawable/bow0" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="56dp"
                android:layout_height="6dp"
                android:contentDescription="@null"
                android:src="@drawable/arrow_normal" />

            <ImageView
                android:id="@+id/score"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:contentDescription="@null"
                android:src="@drawable/score1" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:lines="1"
                android:padding="2dp"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColor="#FFFF70"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_arrows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="24dp"
                android:lines="1"
                android:padding="2dp"
                android:shadowColor="#000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="2"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:background="#000"
                android:gravity="center"
                android:lines="1"
                android:padding="10dp"
                android:text="@string/completed"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:orientation="horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_sign"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_sign_in" />

                <Button
                    android:id="@+id/btn_leaderboard"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_leaderboard" />

                <Button
                    android:id="@+id/btn_sound"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_mute" />

                <Button
                    android:id="@+id/btn_start"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_start"
                    android:onClick="onClick"
                    android:text="@string/btn_start"
                    android:textColor="#FFF" />

                <Button
                    android:id="@+id/btn_exit"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_exit" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#E93C6C"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_high_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/high_score"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_home"
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_home" />

                <Button
                    android:id="@+id/btn_start2"
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_start"
                    android:onClick="onClick"
                    android:text="@string/btn_start2"
                    android:textColor="#FFF" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>